--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,7 +1,14 @@
 @import 'compass'
+
+body
+	background-image: url('img/pattern.png')
+	font-family: 'Segoe UI'
 h1
-	color: yellow
-	+border-radius
+	font-size: 24px
 h2
-	+translate
-	color: blue
+	font-size: 18px
+.btn
+	border: 1px solid #3181b4
+	box-shadow: inset 0 1px 0 0 #cce7f8
+	font-family: 'Myriad Pro'
+	font-weight: bold
