--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,23 @@
-/* line 2, ../sass/style.sass */
-h1 {
-  color: yellow;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  -ms-border-radius: 5px;
-  -o-border-radius: 5px;
-  border-radius: 5px;
+/* line 3, ../sass/style.sass */
+body {
+  background-image: url("img/pattern.png");
+  font-family: "Segoe UI";
 }
 
-/* line 5, ../sass/style.sass */
+/* line 6, ../sass/style.sass */
+h1 {
+  font-size: 24px;
+}
+
+/* line 8, ../sass/style.sass */
 h2 {
-  -webkit-transform: translate(1em, 1em);
-  -moz-transform: translate(1em, 1em);
-  -ms-transform: translate(1em, 1em);
-  -o-transform: translate(1em, 1em);
-  transform: translate(1em, 1em);
-  color: blue;
+  font-size: 18px;
+}
+
+/* line 10, ../sass/style.sass */
+.btn {
+  border: 1px solid #3181b4;
+  box-shadow: inset 0 1px 0 0 #cce7f8;
+  font-family: "Myriad Pro";
+  font-weight: bold;
 }
