--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,14 +1,91 @@
 @import 'compass'
 
 body
-	background-image: url('img/pattern.png')
-	font-family: 'Segoe UI'
+	background-image: url('../img/pattern.png')
+	font-family: 'Segoe UI', sans-serif
+.wrapper
+	background-color: #fff
+	+border-radius(10px)
+	+box-shadow(0 1px rgba(255,255,255,.25), 0 1px 3px rgba(0,0,0,.52))
+	margin-top: 10px
+	width: 90%
+.container-divider
+	border-bottom: 1px dashed #a1a1a1
+	overflow: hidden
+	margin-bottom: 50px
+.container-divider .col-md-6
+	height: 250px
 h1
 	font-size: 24px
 h2
 	font-size: 18px
+.ui-slider
+	background-color: #838383
+	// +border-radius(3px, 5px 5px 4px 4px)
+	+box-shadow(0 1px rgba(255,255,255,.35))
+	border: solid 1px rgba(44,44,44,.54)
+	+background-image(linear-gradient(to bottom, rgba(0,0,0,.06), rgba(255,255,255,.06)))
+	height: .6em
+	margin-top: 27px
+.ui-slider-range
+	+border-radius(2px 3px 3px 2px, 4px 4px 3px 3px)
+	background-color: #2b91d8
+	+box-shadow(inset 0 1px rgba(255,255,255,.23))
+	border: solid 1px #1f5b85
+	+background-image(linear-gradient(to top, rgba(0,0,0,.08), rgba(255,255,255,.08)))
+.ui-slider-handle
+	+border-radius(11px 10px 10px 11px, 11px 11px 10px 10px)
+	+box-shadow(0 2px 2px rgba(0,0,0,.35), inset 0 1px rgba(255,255,255,.67), inset 0 0 3px rgba(0,0,0,.06))
+	border: solid 1px #888
+	outline: 0
+.col-md-my
+	padding-left: 7px
+#text-form
+	margin-top: 15px
+	width: 100%
+
+
 .btn
-	border: 1px solid #3181b4
-	box-shadow: inset 0 1px 0 0 #cce7f8
+	+border-radius(4px)
+	background-color: #37a1e4
+	+box-shadow(0 1px 1px rgba(0,0,0,.19), inset 0 2px rgba(255,255,255,.58), inset 0 0 5px rgba(255,255,255,.38))
+	border: solid 1px #3181b4
+	+background-image(linear-gradient(to bottom, rgba(255,255,255,.26), rgba(255,255,255,0)))
+	color: #fff
 	font-family: 'Myriad Pro'
+	font-size: 16px
 	font-weight: bold
+	margin-top: 70px
+	width: 140px
+	height: 45px
+	+text-shadow(0 1px rgba(0,0,0,.32))
+	&:hover
+		color: #fff
+		background-color: lighten(#37a1e4, 10%)
+	&:focus
+		color: #fff
+
+
+.container-code
+	margin-bottom: 18px
+	overflow: hidden
+.textarea
+	padding: 10px 7px
+	resize: none
+.input-email
+	margin-bottom: 16px
+	padding: 10px 7px 9px
+
+
+
+
+
+
+
+
+
+
+
+@media (max-width: 768px)
+	.textarea
+		float: none !important
