--- a/sass/style.sass
+++ b/sass/style.sass
@@ -3,11 +3,14 @@
 body
 	background-image: url('../img/pattern.png')
 	font-family: 'Segoe UI', sans-serif
+input
+	font-family: "Myriad Pro"
 .wrapper
 	background-color: #fff
 	+border-radius(10px)
 	+box-shadow(0 1px rgba(255,255,255,.25), 0 1px 3px rgba(0,0,0,.52))
 	margin-top: 10px
+	margin-bottom: 16px
 	width: 90%
 .container-divider
 	border-bottom: 1px dashed #a1a1a1
@@ -41,7 +44,8 @@ h2
 .col-md-my
 	padding-left: 7px
 #text-form
-	margin-top: 15px
+	margin-top: 10px
+	padding: 10px 7px 9px
 	width: 100%
 
 
@@ -75,7 +79,20 @@ h2
 .input-email
 	margin-bottom: 16px
 	padding: 10px 7px 9px
-
+.input-submit
+	font-size: 14px
+	font-weight: bold
+	color: #fff
+	margin-bottom: 60px
+	outline: 0
+	+text-shadow(0 1px rgba(0,0,0,.32))
+	width: 109px
+	height: 38px
+	+border-radius(19px)
+	background-color: #50ac44
+	+box-shadow(0 1px 1px rgba(0,0,0,.19), inset 0 2px rgba(255,255,255,.5), inset 0 0 5px rgba(255,255,255,.31))
+	border: solid 1px #3b8e31
+	+background-image(linear-gradient(to bottom, rgba(255,255,255,.34), rgba(255,255,255,0)))
 
 
 
