--- a/sass/style.sass
+++ b/sass/style.sass
@@ -108,3 +108,6 @@ h2
 		float: none !important
 	.textarea:first-of-type
 		margin-bottom: 16px
+@media (max-width: 480px)
+	.textarea
+		width: 80%
