--- a/sass/style.sass
+++ b/sass/style.sass
@@ -108,6 +108,12 @@ h2
 		float: none !important
 	.textarea:first-of-type
 		margin-bottom: 16px
+	.container-divider .col-md-6
+		height: 190px
+		&:last-of-type
+			height: 100px
+			.btn
+				margin-top: 20px
 @media (max-width: 480px)
 	.textarea
 		width: 80%
