fix border issue

--- a/production/css/all.css
+++ b/production/css/all.css
@@ -8062,39 +8062,42 @@ h2 {
   font-size: 16px;
   font-weight: bold;
   margin-top: 70px;
-  width: 140px;
-  height: 44px;
+  width: 115px;
+  height: 26px;
   text-shadow: 0 1px rgba(0, 0, 0, 0.32);
+  -webkit-box-sizing: content-box;
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
 }
-/* line 66, ../sass/style.sass */
+/* line 67, ../sass/style.sass */
 .btn:hover {
   color: white;
   background-color: #64b6ea;
 }
-/* line 69, ../sass/style.sass */
+/* line 70, ../sass/style.sass */
 .btn:focus {
   color: white;
 }
 
-/* line 73, ../sass/style.sass */
+/* line 74, ../sass/style.sass */
 .container-code {
   margin-bottom: 18px;
   overflow: hidden;
 }
 
-/* line 76, ../sass/style.sass */
+/* line 77, ../sass/style.sass */
 .textarea {
   padding: 10px 7px;
   resize: none;
 }
 
-/* line 79, ../sass/style.sass */
+/* line 80, ../sass/style.sass */
 .input-email {
   margin-bottom: 16px;
   padding: 10px 7px 9px;
 }
 
-/* line 82, ../sass/style.sass */
+/* line 83, ../sass/style.sass */
 .input-submit {
   font-size: 14px;
   font-weight: bold;
@@ -8122,31 +8125,31 @@ h2 {
 }
 
 @media (max-width: 768px) {
-  /* line 107, ../sass/style.sass */
+  /* line 108, ../sass/style.sass */
   .textarea {
     float: none !important;
   }
 
-  /* line 109, ../sass/style.sass */
+  /* line 110, ../sass/style.sass */
   .textarea:first-of-type {
     margin-bottom: 16px;
   }
 
-  /* line 111, ../sass/style.sass */
+  /* line 112, ../sass/style.sass */
   .container-divider .col-md-6 {
     height: 190px;
   }
-  /* line 113, ../sass/style.sass */
+  /* line 114, ../sass/style.sass */
   .container-divider .col-md-6:last-of-type {
     height: 100px;
   }
-  /* line 115, ../sass/style.sass */
+  /* line 116, ../sass/style.sass */
   .container-divider .col-md-6:last-of-type .btn {
     margin-top: 20px;
   }
 }
 @media (max-width: 480px) {
-  /* line 118, ../sass/style.sass */
+  /* line 119, ../sass/style.sass */
   .textarea {
     width: 80%;
   }
