--- a/sass/style.sass
+++ b/sass/style.sass
@@ -60,9 +60,10 @@ h2
 	font-size: 16px
 	font-weight: bold
 	margin-top: 70px
-	width: 140px
-	height: 44px
+	width: 115px
+	height: 26px
 	+text-shadow(0 1px rgba(0,0,0,.32))
+	+box-sizing(content-box)
 	&:hover
 		color: #fff
 		background-color: lighten(#37a1e4, 10%)
