--- a/sass/style.sass
+++ b/sass/style.sass
@@ -60,8 +60,10 @@ h2
 	font-size: 16px
 	font-weight: bold
 	margin-top: 70px
+	outline: 0
 	width: 115px
 	height: 26px
+	+transition(.4s)
 	+text-shadow(0 1px rgba(0,0,0,.32))
 	+box-sizing(content-box)
 	&:hover
@@ -69,6 +71,11 @@ h2
 		background-color: lighten(#37a1e4, 10%)
 	&:focus
 		color: #fff
+		outline: 0
+	&:active
+		outline: 0
+	&:active:focus
+		outline: 0
 
 
 .container-code
