--- a/sass/style.sass
+++ b/sass/style.sass
@@ -103,14 +103,9 @@ h2
 	+background-image(linear-gradient(to bottom, rgba(255,255,255,.34), rgba(255,255,255,0)))
 
 
-
-
-
-
-
-
-
-
+@media (max-width: 980px)
+	.textarea
+		width: 90%
 @media (max-width: 768px)
 	.textarea
 		float: none !important
