minor styles change

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -4,7 +4,7 @@ body
 	background-image: url('../img/pattern.png')
 	font-family: 'Segoe UI', sans-serif
 input
-	font-family: "Myriad Pro"
+	font-family: "Myriad Pro", sans-serif
 .wrapper
 	background-color: #fff
 	+border-radius(10px)
