--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body {
 
 /* line 6, ../sass/style.sass */
 input {
-  font-family: "Myriad Pro";
+  font-family: "Myriad Pro", sans-serif;
 }
 
 /* line 8, ../sass/style.sass */
