--- a/sass/style.sass
+++ b/sass/style.sass
@@ -91,16 +91,29 @@ h2
 	font-size: 14px
 	font-weight: bold
 	color: #fff
+	margin-top: 16px
 	margin-bottom: 60px
 	outline: 0
 	+text-shadow(0 1px rgba(0,0,0,.32))
-	width: 109px
-	height: 38px
+	width: 75px
+	height: 27px
 	+border-radius(19px)
 	background-color: #50ac44
 	+box-shadow(0 1px 1px rgba(0,0,0,.19), inset 0 2px rgba(255,255,255,.5), inset 0 0 5px rgba(255,255,255,.31))
 	border: solid 1px #3b8e31
 	+background-image(linear-gradient(to bottom, rgba(255,255,255,.34), rgba(255,255,255,0)))
+	&:hover
+		background-color: lighten(#50ac44, 10%)
+
+.has-error
+	border-color: #ce8483
+	+box-shadow(0 1px 1px rgba(0,0,0,.075),0 0 6px #ce8483)
+	outline: 0
+.has-success
+	border-color: #3c763d
+	+box-shadow(0 1px 1px rgba(0,0,0,.075),0 0 6px #3c763d)
+	outline: 0
+
 
 
 @media (max-width: 980px)
