fix small git bug

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -3,6 +3,12 @@
 body
 	background-image: url('../img/pattern.png')
 	font-family: 'Segoe UI', sans-serif
+.loader
+	bottom: 300px
+	left: 50%
+	margin-left: -16px
+	position: absolute
+	display: none
 input
 	font-family: "Myriad Pro", sans-serif
 .wrapper
